# reaction-chamber

./: .gitattributes  .gitignore  README.md  Untitled-2025-11-24-1149_6_.excalidraw  chassis.stl  connector.md
PCB/cme495_pcb/: #auto_saved_files#  cme495_pcb.kicad_pro  cme495_pcb.kicad_sch
PCB/display-pcb/: display-pcb.kicad_pcb  display-pcb.kicad_pro  display-pcb.kicad_sch  display-pcb.stl  display.kicad_sym  fp-lib-table  sym-lib-table
PCB/pcb-wiring-plan/: pcb-wiring-plan.kicad_pro  pcb-wiring-plan.kicad_sch
PCB/power_splitter/: #auto_saved_files#  _autosave-power_splitter.kicad_pcb  _autosave-power_splitter.kicad_sch  power_splitter.kicad_pcb  power_splitter.kicad_pro  power_splitter.kicad_sch  sym-lib-table
PCB/power_splitter - NEW/: #auto_saved_files#  power_splitter - Copy.kicad_sch  power_splitter.kicad_pcb  power_splitter.kicad_sch
code/: CMakeLists.txt
code/output/: file_format.json
code/scripts/: handy_commands.txt  run_tests.ps1
code/src/: main.c
code/tests/: test_main.c
examples/mcp3208_example/: CMakeLists.txt  mcp3208_example.c
examples/mcp9808_i2c/: CMakeLists.txt
hardware_examples/mcp3208_example/: CMakeLists.txt
hardware_examples/mcp9808_i2c/: mcp9808_i2c.c
src/: CMakeLists.txt
src/.claude/: settings.local.json
src/blink/: .gitignore  CMakeLists.txt  board_setup.c  clean_build.ps1  main.c  run_tests.ps1  system_state_loop.c  test_manager.c
src/blink/tests/: CMakeLists.txt  test_main.c
src/blink/tests/include/: heater_tests.h
src/blink/tests/test_files/: heater_tests.c
src/output/: results.json
src/src/: main.c
(+262 files in other folders)
